--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://ballinbb:passwordBB33@cluster0.tsyfbzf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+JWT_SECRET=jwtSecret
