adds register functionality in auth controller

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://ballinbb:passwordBB33@cluster0.tsyfbzf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
-JWT_SECRET=jwtSecret
+JWT_SECRET=9Hi0zwPEThhQD2a49etulOSJZ6k86s6D
+JWT_LIFETIME=30d
