--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "simple sports bet tracking api",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Brad Bell",
   "license": "ISC",
